--- a/data-architect.html
+++ b/data-architect.html
@@ -69,6 +69,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://glpg.recruitee.com/o/its-data-architect-mechelenbe'>
+      ITS Data Architect - Mechelen,BE - Galapagos
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -207,7 +213,7 @@ dig?...</p>
 <p><span class="badge badge-light">Richmond, VA, USA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/9exu73upgipych8suk6n7ywpba'>Senior Data Architect | Manifest Solutions</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/9exu73upgipych8suk6n7ywpba'>Senior Data Architect | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -292,7 +298,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/o/database-architect-hf-cdi'>
       Database Architect H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -460,7 +466,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light">Foster City California</span></p>
 <p>Posted on:: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/allstafftechnicalsolutions/job/ucnyphaukbiz79kba3nrpu5o1w'>Database Architect | Allstaff Solutions</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/allstafftechnicalsolutions/job/ucnyphaukbiz79kba3nrpu5o1w'>Database Architect | Allstaff Solutions</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -475,10 +481,6 @@ our Federal Client's business in defining requirements to support machine?...</p
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=oeEeafw0&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=nrWU4MwC'>Accudata Systems, Inc. Careers - Risk &amp; Compliance Solutions Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-09</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/nutanix/job/oDehbfw3'>Nutanix Careers - Database Specialist Solution Architect</a></h5> 
-<p><span class="badge badge-light">Dubai</span></p>
-<p>Posted on: 2019-10-09</p>
 <hr/>
 
 
