--- a/android-developer.html
+++ b/android-developer.html
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light">Vietnam  Ho Chi Minh Vietnam</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/Fc8A2aKTsy/Android-Developer'>Android Developer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/Fc8A2aKTsy/Android-Developer'>Android Developer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -144,7 +144,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.priorityrecruitment.co.uk/job/senior-android-developer/'>"Senior Android Developer" with ref. RT-19  I.T.  jobs in Surrey - Priority Recruitment</a></h5> 
+<h5><a href='https://www.priorityrecruitment.co.uk/job/senior-android-developer/'>"Senior Android Developer" with ref. RT-19  I.T.  jobs in Surrey - Priority Recruitment</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -180,7 +180,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
 	
     Apply for Lead Android Developer -  Woking, United Kingdom - IT and Internet - SS003 - Find a job, build a career
 
@@ -214,7 +214,7 @@ with a passion for creating innovative digital experiences, to help us launch th
 <p>Oct 9, 2019 ... Job Description. We are looking for an Android developer responsible for the 
 development and maintenance of applications aimed at the public as well as?...</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/jgvhXRlqaB/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/jgvhXRlqaB/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -322,7 +322,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Minsk France Italy Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384225-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999697384225-senior-android-developer'>TrophyRoom Pte Ltd Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -354,7 +354,7 @@ Experienced Android Application Developer at Yor Labs Inc in Portland | Android 
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8309-senior-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8309-senior-android-developer'>
 Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -378,7 +378,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4472394002'>Job Application for Android Developer - Store Pick at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4472394002'>Job Application for Android Developer - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -398,7 +398,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Dublin  Dublin</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://getchip.recruitee.com/o/android-developer-london'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://getchip.recruitee.com/o/android-developer-london'>
       Android Developer - Chip
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -422,7 +422,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692011066-hiring-android-developer'>Dalitso Consulting Hiring: Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/DalitsoConsulting/743999692011066-hiring-android-developer'>Dalitso Consulting Hiring: Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">South Africa</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -430,7 +430,7 @@ Senior Android Developer at BUX in Amsterdam | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/EhHNeliOAp/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/EhHNeliOAp/Android-Developer'>Android Developer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
